Added Open Api 3 documentation

--- a/config-server/src/main/resources/shared/application.yml
+++ b/config-server/src/main/resources/shared/application.yml
@@ -71,6 +71,9 @@ spring:
   rabbitmq:
     host: rabbitmq
 
+springdoc:
+  swagger-ui:
+    path: /
 
 error-messages:
   -1: 'Teknik bir arıza oluştu. {0}'
