user-service global pom & shared config

--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,6 @@
         <module>api-gateway</module>
         <module>config-server</module>
         <module>uaa-server</module>
+        <module>user-service</module>
     </modules>
 </project>
