--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.18</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
