--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -29,10 +29,20 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-      defaultZone: http://${EUREKA_USERNAME:user}:${EUREKA_PASSWORD:12345}@localhost:8765/eureka/
+      defaultZone: http://user:12345@localhost:8761/eureka/
     healthcheck:
       enabled: true
     lease:
       duration: 5
 
 management.security.enabled: false
+
+---
+
+spring:
+  profiles: docker
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:12345@eureka-server:8761/eureka/
