--- a/config-server/src/main/resources/shared/application.yml
+++ b/config-server/src/main/resources/shared/application.yml
@@ -15,7 +15,7 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-      defaultZone: http://${EUREKA_USERNAME:user}:${EUREKA_PASSWORD:12345}@localhost:8765/eureka/
+      defaultZone: http://${EUREKA_USERNAME:user}:${EUREKA_PASSWORD:12345}@localhost:8761/eureka/
     healthcheck:
       enabled: true
     lease:
@@ -78,3 +78,13 @@ springdoc:
 error-messages:
   -1: 'Teknik bir arıza oluştu. {0}'
   0: 'Başarıyla tamamlandı.'
+
+---
+
+spring:
+  profiles: docker
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:12345@eureka-server:8761/eureka/
