--- a/config-server/src/main/resources/shared/user-service.yml
+++ b/config-server/src/main/resources/shared/user-service.yml
@@ -21,3 +21,10 @@ server:
     session:
       cookie:
         http-only: true
+
+---
+
+spring:
+  profiles: docker
+  datasource:
+    url: jdbc:postgresql://postgres-db:5432/postgres
