--- a/eureka-server/src/main/resources/bootstrap.yml
+++ b/eureka-server/src/main/resources/bootstrap.yml
@@ -8,8 +8,17 @@ spring:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888}
       password: ${CONFIG_SERVER_PASSWORD:12345}
       username: ${CONFIG_SERVER_USERNAME:user}
+      fail-fast: true
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+---
+
+spring:
+  profiles: docker
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URL:http://config-server:8888}
