--- a/uaa-server/src/main/resources/bootstrap.yml
+++ b/uaa-server/src/main/resources/bootstrap.yml
@@ -8,3 +8,12 @@ spring:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888}
       password: ${CONFIG_SERVER_PASSWORD:12345}
       username: ${CONFIG_SERVER_USERNAME:user}
+      fail-fast: true
+
+---
+
+spring:
+  profiles: docker
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URL:http://config-server:8888}
