--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
         <module>api-gateway</module>
         <module>uaa-server</module>
         <module>user-service</module>
+        <module>dashboard-service</module>
     </modules>
 </project>
