wall service with crud and upload operations

--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,6 @@
         <module>uaa-server</module>
         <module>user-service</module>
         <module>dashboard-service</module>
+        <module>wall-service</module>
     </modules>
 </project>
