added cors configuration for cloud gateway

--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -9,6 +9,19 @@ spring:
       password: ${CONFIG_SERVER_PASSWORD:12345}
       username: ${CONFIG_SERVER_USERNAME:user}
       fail-fast: true
+    gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              -GET
+              -HEAD
+              -PUT
+              -POST
+              -DELETE
+              -PATCH
+              -OPTIONS
 
 ---
 
