--- a/dashboard-service/pom.xml
+++ b/dashboard-service/pom.xml
@@ -129,6 +129,18 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>2.3.8.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.5.15</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>3.6.28</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
