--- a/dashboard-service/pom.xml
+++ b/dashboard-service/pom.xml
@@ -20,6 +20,9 @@
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 		<lombok.version>1.18.10</lombok.version>
+		<mockito-core.version>3.5.15</mockito-core.version>
+		<mockito-inline.version>3.6.28</mockito-inline.version>
+		<jococo-plugin.version>0.8.6</jococo-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -132,13 +135,13 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.5.15</version>
+			<version>${mockito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
-			<version>3.6.28</version>
+			<version>${mockito-inline.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -188,6 +191,57 @@
 						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
 						<arg>-Amapstruct.defaultComponentModel=spring</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<!-- Runs JUnit tests under code coverage and creates a coverage report (target/site/jacoco/index.html). -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jococo-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>COMPLEXITY</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.20</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>tr/com/kafein/dashboard/DashboardServiceApplication.class</exclude>
+						<exclude>tr/com/kafein/dashboard/type/*</exclude>
+						<exclude>tr/com/kafein/dashboard/mapper/*</exclude>
+						<exclude>tr/com/kafein/dashboard/repository/*</exclude>
+						<exclude>tr/com/kafein/dashboard/data/*</exclude>
+						<exclude>tr/com/kafein/dashboard/dto/*</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
