--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>15</java.version>
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+		<spring-retry.version>1.2.5.RELEASE</spring-retry.version>
 	</properties>
 
 	<dependencies>
@@ -42,7 +43,7 @@
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
-			<version>1.2.5.RELEASE</version>
+			<version>${spring-retry.version}</version>
 		</dependency>
 
 		<dependency>
