--- a/uaa-server/pom.xml
+++ b/uaa-server/pom.xml
@@ -22,6 +22,9 @@
 		<mockito-core.version>3.5.15</mockito-core.version>
 		<mockito-inline.version>3.6.28</mockito-inline.version>
 		<lombok.version>1.18.10</lombok.version>
+		<spring-retry.version>1.2.5.RELEASE</spring-retry.version>
+		<springdoc-openapi-ui>1.5.2</springdoc-openapi-ui>
+		<jjwt.version>0.9.1</jjwt.version>
 	</properties>
 
 	<dependencies>
@@ -48,7 +51,7 @@
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
-			<version>1.2.5.RELEASE</version>
+			<version>${spring-retry.version}</version>
 		</dependency>
 
 		<dependency>
@@ -77,7 +80,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.5.2</version>
+			<version>${springdoc-openapi-ui}</version>
 		</dependency>
 
 		<dependency>
@@ -95,7 +98,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 
 		<dependency>
