--- a/wall-service/pom.xml
+++ b/wall-service/pom.xml
@@ -20,6 +20,13 @@
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 		<lombok.version>1.18.10</lombok.version>
+		<spring-retry.version>1.2.5.RELEASE</spring-retry.version>
+		<postgresql.version>42.2.18</postgresql.version>
+		<springdoc-openapi-ui.version>1.5.2</springdoc-openapi-ui.version>
+		<jjwt.version>0.9.1</jjwt.version>
+		<mockito-core.version>3.5.15</mockito-core.version>
+		<mockito-inline.version>3.6.28</mockito-inline.version>
+		<jococo-plugin.version>0.8.6</jococo-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -46,7 +53,7 @@
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
-			<version>1.2.5.RELEASE</version>
+			<version>${spring-retry.version}</version>
 		</dependency>
 
 		<dependency>
@@ -97,19 +104,19 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.18</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.5.2</version>
+			<version>${springdoc-openapi-ui.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 
 		<dependency>
@@ -125,11 +132,17 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.3.8.RELEASE</version>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito-core.version}</version>
+			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>${mockito-inline.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -181,6 +194,57 @@
 						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
 						<arg>-Amapstruct.defaultComponentModel=spring</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<!-- Runs JUnit tests under code coverage and creates a coverage report (target/site/jacoco/index.html). -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jococo-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>COMPLEXITY</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.20</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>tr/com/kafein/wall/WallServiceApplication.class</exclude>
+						<exclude>tr/com/kafein/wall/accessor/*</exclude>
+						<exclude>tr/com/kafein/wall/data/*</exclude>
+						<exclude>tr/com/kafein/wall/repository/*</exclude>
+						<exclude>tr/com/kafein/wall/mapper/*</exclude>
+						<exclude>tr/com/kafein/wall/type/*</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
